force-app/main/default/objects/C360_Product__c.object
<CustomObject>
    <fields>
        <fullName>BaseUnitText__c</fullName>
        <label>BaseUnit text</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BaseUnit__c</fullName>
        <label>Base Unit of Measure</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Unit</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>BusinessUnit__c</fullName>
        <label>Business Unit</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DeletionMark__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Deletion Mark</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Division__c</fullName>
        <label>Division</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Division</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>MaterialCode__c</fullName>
        <externalId>true</externalId>
        <label>Material Code</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>MaterialGroup__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Material Group</label>
        <referenceTo>Master_Map__c</referenceTo>
        <relationshipName>Products3</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ProductNameText__c</fullName>
        <label>Product Name Text</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SalesOrganization__c</fullName>
        <label>Sales Organization</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SizeDimensions__c</fullName>
        <description>Size/dimensions</description>
        <label>Size/dimensions</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <label>Product</label>
    <listViews>
        <fullName>All</fullName>
        <columns>MaterialCode__c</columns>
        <columns>NAME</columns>
        <columns>MaterialGroup__c</columns>
        <columns>Division__c</columns>
        <columns>SizeDimensions__c</columns>
        <columns>DeletionMark__c</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Division__c</field>
            <operation>equals</operation>
            <value>53</value>
        </filters>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Product Name</label>
        <type>Text</type>
    </nameField>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>